--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,119 @@
-.App {
-  text-align: center;
+.header {
+  padding: 10px 50px;
+  background: #6761A8;
+  color: #f1f1f1;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.top {
+  margin-top: 100px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.logo{
+  float: left;
+}
+
+.link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.github-mobile {
+  display: none;
+}
+
+.contribute {
+  margin-top: 28px;
+  margin-left: 80%
+}
+
+.github {
+  color: #fff;
+  margin-bottom: -2px;
+}
+
+.github:hover {
+  color: #4CAF50;
+}
+
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+  top: 88px;
+}
+
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.sidebar a.active {
+  background-color: #4CAF50;
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
 }
 
-.App-intro {
-  font-size: large;
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+@media screen and (max-width: 800px) {
+  .header {
+    text-align: center;
+    padding: 0px;
+  }
+  .sidebar {
+    top: 68px;
+  }
+  .top {
+    margin-top:  0px;
+  }
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {float: left;}
+  div.content {
+    margin-left: 0;
+    margin-top: 100px;
+  }
+  .contribute-1 {
+    display: none;
+  }
+  .span {
+    display: none;
+  }
+  .logo {
+    float: left;
+    margin-left: 25px;
+}
+}
+
+@media screen and (max-width: 1100px) and (min-width: 1000px) {
+  .contribute {
+    margin-left: 75%;
+}
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
 }
